--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     
 </div>
    <div class="right_container">
-    <img src="Does-having-500-connections-on-LinkedIn-make-a-difference.webp" alt="">
+    <img src="img-1.webp" alt="">
    </div>
    </div>
 </body>
