--- a/404.html
+++ b/404.html
@@ -11,6 +11,35 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 </head>
+<style>
+    @media screen and (max-width:768px){
+        .container{
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    height: 100vh;
+    margin: auto;
+}
+        img{
+           width: 100%;
+           height: 40%;
+        }
+    }
+     @media screen and (max-width:456px){
+     .container{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    margin: auto;
+
+}
+        img{
+           width: 100%;
+           height: 40%;
+        }
+     }
+</style>
 <body>
         <div class="container">
             <img src="Adobe Express - file.png" alt="image">
