--- a/landing-page-cv.html
+++ b/landing-page-cv.html
@@ -9,11 +9,76 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
+<style>
+    @media screen and (max-width:1024px){
+    .container{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .right-container{
+        width: 70%;
+    }
+    .left-container{
+        width: 100%;
+        height: 40vh;
+    }
+    .left-container-info{
+        margin-top: 5%;
+        justify-content: flex-start;
+
+    }
+    .left-container-info p {
+        text-align: center;
+        margin: 0px 2px;
+
+}
+    }
+    @media screen and (max-width:920px){
+    .search-option{
+        display: none;
+    }
+    }
+    @media screen and (max-width:570px){
+     .right-container{
+        flex-direction: column;
+     }
+     .testimonial-card {
+        width: 100%;
+        margin: auto;
+     }
+    .login-button,.signup-button{
+        padding: 10px 20px;
+    }
+    }
+     @media screen and (max-width:480px){
+    h1{
+        font-size: 1rem;
+    }
+        .login-button,.signup-button{
+        display: none;
+    }
+    nav{
+    }
+    .hamburger {
+        padding-top: 15px;
+        display: block;
+        text-align:end;
+        margin-left: 40%;
+        }
+
+     }
+</style>
 <body>
     <nav>
     <div class="navbar-container">
     <h1><span class="resume">Resume</span><span class="hub">.Hub</span></h1>
     </div>
+    <input type="checkbox" id="menu-toggle" />
+    <label class="hamburger" for="menu-toggle" id="hamburger">
+                <div></div>
+                <div></div>
+                <div></div>
+    </label>
     <div class="search-option">
         <input type="text" placeholder="Search Here" class="search-bar"><i  class="fa-solid fa-magnifying-glass"></i>
     </div>
@@ -25,8 +90,9 @@
     <div class="container">
     <div class="left-container">
         <div class="left-container-info">
-        <h1 class="heading"><span style="color: green;">Unlock</span><span style="color: rgb(28, 63, 28); padding: 0px 2px;"> your </span><span style="color: green;">Potential Career</span>
+        <h1 class="heading"><span style="color: green;">Unlock your Potential Career</span>
         </h1>
+        <p>We provide a user-friendly platform with professionally designed,ensuring your application stands out to recruiters and passes automated screening systems.You can create a polished, error-free CV that highlights your unique skills and achievements, maximizing your chances of landing that crucial interview.</p>
         <button class="cv-button">Create CV now</button>
         <p></p>
         </div>
@@ -41,7 +107,7 @@
 
     <div class="right-container">
     <div class="testimonial-card">
-        <img src="pic1.png" alt="Ante Horvat" class="testimonial-img">
+        <img src="images (1).jpg" alt="Ante Horvat" class="testimonial-img">
         <div class="testimonial-info">
             <h3>Ante Horvat</h3>
             <p>Backend developer</p>
@@ -50,7 +116,7 @@
     </div>
 
     <div class="testimonial-card">
-        <img src="pic2.jpg" alt="Maria Lopez" class="testimonial-img">
+        <img src="images.jpg" alt="Maria Lopez" class="testimonial-img">
         <div class="testimonial-info">
             <h3>Maria Lopez</h3>
             <p>Google intern</p>
@@ -60,7 +126,7 @@
     </div>
 
     <div class="testimonial-card">
-        <img src="pic3.jpg" alt="Tena Hren" class="testimonial-img">
+        <img src="images (2).jpg" alt="Tena Hren" class="testimonial-img">
         <div class="testimonial-info">
             <h3>Tena Hren</h3>
             <p>Accountant</p>
